Fixes on colision
